Migrated to Spring Boot 3.3 and Spring 6