@@ -1,160 +1,72 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<packaging>pom</packaging>
-	<version>1.0-SNAPSHOT</version>
-	<groupId>com.niulbird.clubmgr</groupId>
-	<artifactId>clubmgr</artifactId>
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<spring.version>5.3.24</spring.version>
-		<spring.security.version>5.2.15.RELEASE</spring.security.version>
-		<tiles.version>3.0.8</tiles.version>
-		<project.build.sourceEncoding>
-      		UTF-8
-  		</project.build.sourceEncoding>
-  		<maven.compiler.target>11</maven.compiler.target>
-  		<maven.compiler.source>11</maven.compiler.source>
-	</properties>
-	<prerequisites>
-		<maven>3.1.0</maven>
-	</prerequisites>
-	<modules>
-		<module>clubmgr-db</module>
-		<module>clubmgr-data</module>
-		<module>clubmgr-util</module>
-		<module>clubmgr-email</module>
-		<module>clubmgr-jobs</module>
-		<module>clubmgr-bfc</module>
-	</modules>
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>com.niulbird.clubmgr</groupId>
-				<artifactId>clubmgr-db</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.niulbird.clubmgr</groupId>
-				<artifactId>clubmgr-data</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.niulbird.clubmgr</groupId>
-				<artifactId>clubmgr-util</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.niulbird.clubmgr</groupId>
-				<artifactId>clubmgr-email</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.niulbird.clubmgr</groupId>
-				<artifactId>clubmgr-jobs</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.niulbird.clubmgr</groupId>
-				<artifactId>clubmgr-bfc</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
-	<dependencies>
-	<!-- LOG4J -->
-	<dependency>
-    	<groupId>org.apache.logging.log4j</groupId>
-    	<artifactId>log4j-core</artifactId>
-    	<version>2.17.1</version>
-  	</dependency>
-	<dependency>
-		<groupId>org.jboss.logging</groupId>
-		<artifactId>jboss-logging</artifactId>
-		<version>3.3.0.Final</version>
-	</dependency>
-    <dependency>
-      <groupId>javax.validation</groupId>
-      <artifactId>validation-api</artifactId>
-      <version>1.1.0.Final</version>
-    </dependency>
-    <dependency>
-      <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-validator</artifactId>
-      <version>5.3.6.Final</version>
-    </dependency>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.niulbird.clubmgr</groupId>
+    <artifactId>clubmgr</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <name>Club Mgr</name>
 
+    <modules>
+        <module>clubmgr-bfc</module>
+        <module>clubmgr-data</module>
+        <module>clubmgr-email</module>
+        <module>clubmgr-db</module>
+        <module>clubmgr-util</module>
+    </modules>
 
-		<!-- Test Dependencies -->
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.13.1</version>
-			<scope>test</scope>
+    <properties>
+        <java.version>21</java.version>
+        <spring-boot.version>3.3.11</spring-boot.version>
+	<spring.security.version>6.3.3</spring.security.version>
+        <postgresql.version>42.7.2</postgresql.version>
+	<flyway.version>9.22.3</flyway.version>
+	<hibernate.version>6.6.1.Final</hibernate.version>
+    </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring-boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-test</artifactId>
+                <version>${spring-boot.version}</version>
+                <scope>test</scope>
+    		<exclusions>
+                    <exclusion>
+                        <groupId>org.json</groupId>
+                        <artifactId>json</artifactId>
+                    </exclusion>
+                    <exclusion>
+            		<groupId>com.vaadin.external.google</groupId>
+            		<artifactId>android-json</artifactId>
+        		</exclusion>
+                    </exclusions>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-test</artifactId>
-			<version>${spring.version}</version>
-			<scope>test</scope>
-		</dependency>
+        </dependencies>
+    </dependencyManagement>
 
-	</dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
-	<build>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>com.samaxes.maven</groupId>
-					<artifactId>minify-maven-plugin</artifactId>
-					<version>1.7.4</version>
-				</plugin>
-			</plugins>
-		</pluginManagement>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
-				<configuration>
-					<release>11</release>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-eclipse-plugin</artifactId>
-				<version>2.10</version>
-				<configuration>
-					<wtpmanifest>true</wtpmanifest>
-					<wtpapplicationxml>true</wtpapplicationxml>
-					<wtpversion>2.0</wtpversion>
-					<manifest>
-						${basedir}/src/main/resources/META-INF/MANIFEST.MF
-					</manifest>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.owasp</groupId>
-				<artifactId>dependency-check-maven</artifactId>
-				<version>3.2.0</version>
-				<configuration>
-					<reportSets>
-						<reportSet>
-							<reports>
-								<report>aggregate</report>
-							</reports>
-						</reportSet>
-					</reportSets>
-				</configuration>
-				<executions>
-					<execution>
-						<goals>
-							<goal>check</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
 </project>
+
